# MovieDB-API

./: db.sqlite3  pyproject.toml
movie_info/: admin.py  csrf_token_view.py  experimental_urls.py  experimental_views.py  models.py  signals.py
movie_info/api/: permissions.py  serializers.py  urls.py  views.py
movie_info/management/commands/: create_movies.py
movie_info/migrations/: 0001_initial.py  0002_movielist_streamingplatform_delete_movie.py  0003_alter_streamingplatform_about.py  0004_movielist_platform.py  0005_review.py  0006_review_review_user.py  0007_movielist_avg_rating_movielist_number_rating.py
moviedb/: asgi.py  settings.py  urls.py  wsgi.py
user/: apps.py  signals.py
user/api/: serializers.py  urls.py  views.py
